# Krystal

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  build.bat  bump-version.ps1  package-lock.json  package.json  release.bat  run.bat
.github/workflows/: release.yml
src/: app.js  base.css  chat.css  i18n.js  index.html  onboarding.js  updater.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: catalog.rs  claude.rs  commands.rs  db.rs  discord.rs  main.rs  models.rs
src/app/: activity.js  attachments.js  boot.js  chat.js  controls.js  core.js  git.js  links.js  localization.js  logo.js  mentions.js  messages.js  orchestrator.js  projects.js  run.js  search.js  settings.js  sidebar.js  stream.js  tasks.js  usage.js  wizard.js
