[package]
name = "krystal"
version = "0.11.0"
description = "Krystal — a local Claude Code chat app (Tauri)"
authors = ["Krystal"]
edition = "2021"
rust-version = "1.77"

# The desktop binary. Single-binary desktop app (no mobile/lib split).
[[bin]]
name = "krystal"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
# Self-update: check GitHub Releases on launch, download + verify a signed
# update, then relaunch. `process` provides the relaunch after install.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Fetch the live Anthropic model catalogue (GET /v1/models) so the picker stays
# current. rustls (no native TLS dep); reqwest is already in the tree via the
# updater plugin, so this adds little. Only used for the models catalogue.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["process", "io-util", "rt-multi-thread", "macros", "time", "sync"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["clock"] }
# Discord Rich Presence — pure-Rust IPC client (no native deps). Talks to the
# local Discord desktop client to show the active project on the user's profile.
discord-rich-presence = "0.2"

# Smaller, faster release binary for the one-click app.
[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
panic = "abort"
